mTLS/disable-mtls-gateway.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: api-gateway-service
  namespace: garage-namespace
spec:
  selector:
    matchLabels:
      name: api-gateway-service
  mtls:
    mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: api-gateway-service
  namespace: garage-namespace
spec:
  host: api-gateway-service
  trafficPolicy:
    tls:
      mode: DISABLE
  subsets:
  - name: v1
    labels:
      version: v1

---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: client-service
  namespace: garage-namespace
spec:
  selector:
    matchLabels:
      name: client-service
  mtls:
    mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: client-service
  namespace: garage-namespace
spec:
  host: client-service
  trafficPolicy:
    tls:
      mode: DISABLE
  subsets:
  - name: v1
    labels:
      version: v1
